Changed whole logic for fetching Exchange Rates from API, Currency Enum deleted, rest of the code adapted to new changes